@@ -4,7 +4,8 @@ Changelog
 2.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Make sure we do not pass invalid dates to Solr.
+  [buchi]
 
 
 2.1.0 (2018-02-20)
